# franc-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/agents/: infrahub.agent.md
.github/workflows/: main.yml
franc/: constants.py  naming.py  server.py  utils.py
franc/prompts/: datacenter_flow.md
franc/tools/: branch.py  datacenter.py  gql.py  nodes.py  schema.py  toon.py
tests/: conftest.py  test_datacenter.py  test_mcp.py  test_mcp.py.bak  test_naming.py  test_toon.py
tests/mocks/: device.json  physical_devices.json  schemas.json
